@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf,v 1.32.2.3 2002/01/02 18:04:22 mike Exp $"
+# "$Id: cupsd.conf,v 1.32.2.4 2002/01/23 17:32:08 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -207,6 +207,26 @@ LogLevel info
 #
 
 #Printcap /etc/printcap
+
+#
+# PrintcapFormat: the format of the printcap file, currently either
+# BSD or Solaris.  The default is BSD.
+#
+
+#PrintcapFormat BSD
+#PrintcapFormat Solaris
+
+#
+# PrintcapGUI: the name of the GUI options panel program to associate
+# with print queues under IRIX.  The default is /usr/bin/glpoptions
+# from ESP Print Pro.
+#
+# This option is only used under IRIX; the options panel program
+# must accept the "-d printer" and "-o options" options and write
+# the selected printer options back to stdout on completion.
+#
+
+#PrintcapGUI /usr/bin/glpoptions
 
 #
 # RequestRoot: the directory where request files are stored.
@@ -715,5 +735,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf,v 1.32.2.3 2002/01/02 18:04:22 mike Exp $".
+# End of "$Id: cupsd.conf,v 1.32.2.4 2002/01/23 17:32:08 mike Exp $".
 #
