@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: accept.man,v 1.4.2.1 2002/01/02 18:04:52 mike Exp $"
+.\" "$Id: accept.man,v 1.4.2.2 2002/01/23 17:32:12 mike Exp $"
 .\"
 .\"   accept/reject man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -31,9 +31,9 @@ destination(s)
 .B reject
 [ -E ] [ -h
 .I server
-] [ -r [
+] [ -r
 .I reason
-] ]
+]
 destination(s)
 .SH DESCRIPTION
 \fIaccept\fR instructs the printing system to accept print jobs to the
@@ -56,5 +56,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2002 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: accept.man,v 1.4.2.1 2002/01/02 18:04:52 mike Exp $".
+.\" End of "$Id: accept.man,v 1.4.2.2 2002/01/23 17:32:12 mike Exp $".
 .\"
