@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: enable.man,v 1.4.2.1 2002/01/02 18:04:52 mike Exp $"
+.\" "$Id: enable.man,v 1.4.2.2 2002/01/23 17:32:12 mike Exp $"
 .\"
 .\"   enable/disable man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -28,9 +28,9 @@ disable, enable \- stop/start printers and classes
 .B disable
 [ -E ] [ \-c ] [ -h
 .I server
-] [ \-r [
+] [ \-r
 .I reason
-] ] destination(s)
+] destination(s)
 .br
 .B enable
 [ -E ] destination(s)
@@ -63,5 +63,5 @@ http://localhost:631/documentation.html
 Copyright 1993-2002 by Easy Software Products, All Rights Reserved.
 
 .\"
-.\" End of "$Id: enable.man,v 1.4.2.1 2002/01/02 18:04:52 mike Exp $".
+.\" End of "$Id: enable.man,v 1.4.2.2 2002/01/23 17:32:12 mike Exp $".
 .\"
